--- a/Rambutan/Rambutan.csproj
+++ b/Rambutan/Rambutan.csproj
@@ -41,8 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bird.cs" />
+    <Compile Include="CleaningPlan.cs" />
+    <Compile Include="FeedingPlan.cs" />
+    <Compile Include="Fish.cs" />
+    <Compile Include="Reptile.cs" />
+    <Compile Include="Staff.cs" />
     <Compile Include="Zoo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ZooKeeper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
