--- a/Rambutan/Rambutan.csproj
+++ b/Rambutan/Rambutan.csproj
@@ -41,18 +41,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bird.cs" />
-    <Compile Include="CleaningPlan.cs" />
-    <Compile Include="FeedingPlan.cs" />
-    <Compile Include="Fish.cs" />
-    <Compile Include="Reptile.cs" />
-    <Compile Include="Staff.cs" />
+    <Compile Include="Administration\Plan.cs" />
+    <Compile Include="Administration\VetExaminationsPlan.cs" />
+    <Compile Include="Animals\Animal.cs" />
+    <Compile Include="Animals\Bird.cs" />
+    <Compile Include="Animals\Carnivorous.cs" />
+    <Compile Include="Animals\Herbivorous.cs" />
+    <Compile Include="Animals\Mammal.cs" />
+    <Compile Include="Administration\CleaningPlan.cs" />
+    <Compile Include="Administration\FeedingPlan.cs" />
+    <Compile Include="Animals\Fish.cs" />
+    <Compile Include="Animals\Reptile.cs" />
+    <Compile Include="HR\AdministrativePersonnel.cs" />
+    <Compile Include="HR\Director.cs" />
+    <Compile Include="HR\Staff.cs" />
     <Compile Include="Zoo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ZooKeeper.cs" />
+    <Compile Include="HR\ZooKeeper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
