--- a/Rambutan/Rambutan.csproj
+++ b/Rambutan/Rambutan.csproj
@@ -42,22 +42,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Administration\Plan.cs" />
-    <Compile Include="Administration\VetExaminationsPlan.cs" />
-    <Compile Include="Animals\Animal.cs" />
+    <Compile Include="Administration\VetExaminationsSchedule.cs" />
     <Compile Include="Animals\Bird.cs" />
-    <Compile Include="Animals\Carnivorous.cs" />
-    <Compile Include="Animals\Herbivorous.cs" />
+    <Compile Include="Animals\Carnivore.cs" />
+    <Compile Include="Animals\Herbivore.cs" />
     <Compile Include="Animals\Mammal.cs" />
-    <Compile Include="Administration\CleaningPlan.cs" />
-    <Compile Include="Administration\FeedingPlan.cs" />
+    <Compile Include="Administration\CleaningSchedule.cs" />
+    <Compile Include="Administration\FeedingSchedule.cs" />
     <Compile Include="Animals\Fish.cs" />
-    <Compile Include="Animals\Reptile.cs" />
     <Compile Include="HR\AdministrativePersonnel.cs" />
     <Compile Include="HR\Director.cs" />
-    <Compile Include="HR\Staff.cs" />
     <Compile Include="Zoo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="HR\ZooKeeper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
