--- a/Rambutan/Rambutan.csproj
+++ b/Rambutan/Rambutan.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Administration\Plan.cs" />
     <Compile Include="Administration\VetExaminationsSchedule.cs" />
+    <Compile Include="Animals\Animal.cs" />
     <Compile Include="Animals\Bird.cs" />
     <Compile Include="Animals\Carnivore.cs" />
     <Compile Include="Animals\Herbivore.cs" />
@@ -56,7 +57,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
