--- a/Rambutan/Zoo.csproj
+++ b/Rambutan/Zoo.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C96BD3D8-0DAA-46B3-806C-90AE9D6D01B6}</ProjectGuid>
+    <ProjectGuid>{927AE45B-02CC-43AE-B4C7-B6CB60AAB5B9}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Rambutan</RootNamespace>
-    <AssemblyName>Rambutan</AssemblyName>
+    <RootNamespace>Zoo</RootNamespace>
+    <AssemblyName>ExampleRambutan</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,24 +41,40 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Administration\Plan.cs" />
-    <Compile Include="Administration\VetExaminationsSchedule.cs" />
     <Compile Include="Animals\Animal.cs" />
-    <Compile Include="Animals\Bird.cs" />
-    <Compile Include="Animals\Carnivore.cs" />
-    <Compile Include="Animals\Herbivore.cs" />
-    <Compile Include="Animals\Mammal.cs" />
-    <Compile Include="Administration\CleaningSchedule.cs" />
-    <Compile Include="Administration\FeedingSchedule.cs" />
-    <Compile Include="Animals\Fish.cs" />
-    <Compile Include="HR\AdministrativePersonnel.cs" />
-    <Compile Include="HR\Director.cs" />
-    <Compile Include="Zoo.cs" />
+    <Compile Include="Animals\Cage.cs" />
+    <Compile Include="Animals\Consumables\Food.cs" />
+    <Compile Include="Animals\Species\Eagle.cs" />
+    <Compile Include="Animals\Species\GoldFish.cs" />
+    <Compile Include="Animals\Species\Lion.cs" />
+    <Compile Include="Animals\Species\Monkey.cs" />
+    <Compile Include="Animals\Species\Python.cs" />
+    <Compile Include="BudgetInfo\Expense.cs" />
+    <Compile Include="BudgetInfo\Income.cs" />
+    <Compile Include="Employees\Director.cs" />
+    <Compile Include="Interfaces\ICarnivore.cs" />
+    <Compile Include="Interfaces\IHerbivore.cs" />
+    <Compile Include="Interfaces\IOmnivore.cs" />
+    <Compile Include="BudgetInfo\Budget.cs" />
+    <Compile Include="Employees\Employee.cs" />
+    <Compile Include="Employees\Nutritionist.cs" />
+    <Compile Include="Employees\Veterinarian.cs" />
+    <Compile Include="Employees\ZooKeeper.cs" />
+    <Compile Include="Animals\Type\Bird.cs" />
+    <Compile Include="Interfaces\IFeedable.cs" />
+    <Compile Include="Animals\Type\Aquatic.cs" />
+    <Compile Include="Animals\Type\Terrestrial.cs" />
+    <Compile Include="Schedules\FeedingSchedule.cs" />
+    <Compile Include="Schedules\Schedule.cs" />
+    <Compile Include="Schedules\WorkingSchedule.cs" />
+    <Compile Include="Start.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="ClassDiagram.cd" />
+    <None Include="App.config" />
+    <None Include="ExampleDiagram.cd" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
