added Penguin.cs and Hoodie.cs, modified Eagle.cs and Ostrich.cs (class Bird - classes Flying and Flightless)

--- a/Rambutan/Zoo.csproj
+++ b/Rambutan/Zoo.csproj
@@ -47,9 +47,11 @@
     <Compile Include="Animals\Species\ClownFish.cs" />
     <Compile Include="Animals\Species\Dolphin.cs" />
     <Compile Include="Animals\Species\Eagle.cs" />
+    <Compile Include="Animals\Species\Hoodie.cs" />
     <Compile Include="Animals\Species\Lion.cs" />
     <Compile Include="Animals\Species\Monkey.cs" />
     <Compile Include="Animals\Species\Ostrich.cs" />
+    <Compile Include="Animals\Species\Penguin.cs" />
     <Compile Include="Animals\Species\Python.cs" />
     <Compile Include="Animals\Type\Flightless.cs" />
     <Compile Include="Animals\Type\Flying.cs" />
