create folders for the different species animals

--- a/Rambutan/Zoo.csproj
+++ b/Rambutan/Zoo.csproj
@@ -44,19 +44,19 @@
     <Compile Include="Animals\Animal.cs" />
     <Compile Include="Animals\Cage.cs" />
     <Compile Include="Animals\Consumables\Food.cs" />
-    <Compile Include="Animals\Species\Bear.cs" />
-    <Compile Include="Animals\Species\ClownFish.cs" />
-    <Compile Include="Animals\Species\Deer.cs" />
-    <Compile Include="Animals\Species\Dolphin.cs" />
-    <Compile Include="Animals\Species\Eagle.cs" />
-    <Compile Include="Animals\Species\Fox.cs" />
-    <Compile Include="Animals\Species\Hoodie.cs" />
-    <Compile Include="Animals\Species\Lion.cs" />
-    <Compile Include="Animals\Species\Monkey.cs" />
-    <Compile Include="Animals\Species\Ostrich.cs" />
-    <Compile Include="Animals\Species\Penguin.cs" />
-    <Compile Include="Animals\Species\Python.cs" />
-    <Compile Include="Animals\Species\Rabbit.cs" />
+    <Compile Include="Animals\Species\Terrestrial\Bear.cs" />
+    <Compile Include="Animals\Species\Aquatic\ClownFish.cs" />
+    <Compile Include="Animals\Species\Terrestrial\Deer.cs" />
+    <Compile Include="Animals\Species\Aquatic\Dolphin.cs" />
+    <Compile Include="Animals\Species\Bird\Eagle.cs" />
+    <Compile Include="Animals\Species\Terrestrial\Fox.cs" />
+    <Compile Include="Animals\Species\Bird\Hoodie.cs" />
+    <Compile Include="Animals\Species\Terrestrial\Lion.cs" />
+    <Compile Include="Animals\Species\Terrestrial\Monkey.cs" />
+    <Compile Include="Animals\Species\Bird\Ostrich.cs" />
+    <Compile Include="Animals\Species\Bird\Penguin.cs" />
+    <Compile Include="Animals\Species\Terrestrial\Python.cs" />
+    <Compile Include="Animals\Species\Terrestrial\Rabbit.cs" />
     <Compile Include="Animals\Type\Flightless.cs" />
     <Compile Include="Animals\Type\Flying.cs" />
     <Compile Include="BudgetInfo\Expense.cs" />
