--- a/Rambutan/Zoo.csproj
+++ b/Rambutan/Zoo.csproj
@@ -66,6 +66,7 @@
     <Compile Include="BudgetInfo\Expense.cs" />
     <Compile Include="BudgetInfo\Income.cs" />
     <Compile Include="Common\NoMenuException.cs" />
+    <Compile Include="Common\VersionAttribute.cs" />
     <Compile Include="Employees\Director.cs" />
     <Compile Include="Interfaces\ICarnivore.cs" />
     <Compile Include="Interfaces\IHerbivore.cs" />
