--- a/Rambutan/Zoo.csproj
+++ b/Rambutan/Zoo.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Animals\Type\Flying.cs" />
     <Compile Include="BudgetInfo\Expense.cs" />
     <Compile Include="BudgetInfo\Income.cs" />
+    <Compile Include="BudgetInfo\TicketSales.cs" />
     <Compile Include="Common\NoMenuException.cs" />
     <Compile Include="Common\VersionAttribute.cs" />
     <Compile Include="Employees\Director.cs" />
