--- a/Rambutan/Zoo.csproj
+++ b/Rambutan/Zoo.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Animals\Type\Terrestrial.cs" />
     <Compile Include="Interfaces\IPayable.cs" />
     <Compile Include="Schedules\FeedingSchedule.cs" />
+    <Compile Include="Schedules\FrequencyType.cs" />
     <Compile Include="Schedules\Schedule.cs" />
     <Compile Include="Schedules\WorkingSchedule.cs" />
     <Compile Include="Start.cs" />
