--- a/Rambutan/Zoo.csproj
+++ b/Rambutan/Zoo.csproj
@@ -45,9 +45,6 @@
   <ItemGroup>
     <Compile Include="Animals\Animal.cs" />
     <Compile Include="Animals\Cage.cs" />
-    <Compile Include="Animals\Consumables\FeedingAnimalAndOrderingFood.cs" />
-    <Compile Include="Animals\Consumables\Food.cs" />
-    <Compile Include="Animals\Consumables\FoodForMammals.cs" />
     <Compile Include="Animals\Species\Terrestrial\Bear.cs" />
     <Compile Include="Animals\Species\Aquatic\ClownFish.cs" />
     <Compile Include="Animals\Species\Terrestrial\Deer.cs" />
@@ -118,7 +115,9 @@
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Animals\Consumables\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
