--- a/Rambutan/Zoo.csproj
+++ b/Rambutan/Zoo.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Animals\Animal.cs" />
     <Compile Include="Animals\Cage.cs" />
     <Compile Include="Animals\Consumables\Food.cs" />
+    <Compile Include="Animals\Consumables\FoodType.cs" />
     <Compile Include="Animals\Species\Terrestrial\Bear.cs" />
     <Compile Include="Animals\Species\Aquatic\ClownFish.cs" />
     <Compile Include="Animals\Species\Terrestrial\Deer.cs" />
