--- a/Rambutan/Zoo.csproj
+++ b/Rambutan/Zoo.csproj
@@ -66,12 +66,10 @@
     <Compile Include="BudgetInfo\Expense.cs" />
     <Compile Include="BudgetInfo\Income.cs" />
     <Compile Include="BudgetInfo\TicketSales.cs" />
-    <Compile Include="Exceptions\EmployeeNotFoundException.cs" />
     <Compile Include="Exceptions\NoMenuException.cs" />
     <Compile Include="Common\VersionAttribute.cs" />
     <Compile Include="Employees\Director.cs" />
-    <Compile Include="Exceptions\AnimalNotFoundException.cs" />
-    <Compile Include="Exceptions\CageNotFoundException.cs" />
+    <Compile Include="Exceptions\UnitNotFoundException.cs" />
     <Compile Include="Interfaces\ICarnivore.cs" />
     <Compile Include="Interfaces\IHerbivore.cs" />
     <Compile Include="Interfaces\IOmnivore.cs" />
