Removed unused classes.

--- a/Rambutan/Zoo.csproj
+++ b/Rambutan/Zoo.csproj
@@ -86,27 +86,13 @@
     <Compile Include="Animals\Type\Terrestrial.cs" />
     <Compile Include="Interfaces\IPayable.cs" />
     <Compile Include="Menu\BaseMenuState.cs" />
-    <Compile Include="Menu\EstateInformation\MenuAllAnimals.cs" />
-    <Compile Include="Menu\EstateInformation\MenuAllEmployees.cs" />
-    <Compile Include="Menu\EstateInformation\MenuBudgetSurplus.cs" />
-    <Compile Include="Menu\EstateInformation\MenuFoodAvailable.cs" />
-    <Compile Include="Menu\EstateInformation\MenuNumberOfCages.cs" />
     <Compile Include="Menu\MainMenu.cs" />
-    <Compile Include="Menu\EstateInformation\MenuEstateInformation.cs" />
-    <Compile Include="Menu\ManageAnimals\MenuBuyAnimals.cs" />
-    <Compile Include="Menu\ManageAnimals\MenuBuyCages.cs" />
-    <Compile Include="Menu\ManageAnimals\MenuManageAnimals.cs" />
-    <Compile Include="Menu\ManageAnimals\MenuSellAnimals.cs" />
-    <Compile Include="Menu\ManageBudget\MenuManageBudget.cs" />
-    <Compile Include="Menu\ManageBudget\RegisterExpenses.cs" />
-    <Compile Include="Menu\ManageBudget\RegisterIncome.cs" />
-    <Compile Include="Menu\ManageEmployees\ManageSalaries.cs" />
-    <Compile Include="Menu\ManageEmployees\MenuManageEmployees.cs" />
-    <Compile Include="Menu\ManageEmployees\RegisterFiredEmployee.cs" />
-    <Compile Include="Menu\ManageEmployees\RegisterHiredEmployee.cs" />
-    <Compile Include="Menu\ManageSchedules\ManageFeedingSchedule.cs" />
-    <Compile Include="Menu\ManageSchedules\ManageWorkingSchedule.cs" />
-    <Compile Include="Menu\ManageSchedules\MenuManageSchedules.cs" />
+    <Compile Include="Menu\MenuEstateInformation.cs" />
+    <Compile Include="Menu\MenuManageAnimals.cs" />
+    <Compile Include="Menu\MenuManageBudget.cs" />
+    <Compile Include="Menu\MenuManageEmployees.cs" />
+    <Compile Include="Menu\MenuManageFood.cs" />
+    <Compile Include="Menu\MenuManageSchedules.cs" />
     <Compile Include="Schedules\FeedingSchedule.cs" />
     <Compile Include="Schedules\FrequencyType.cs" />
     <Compile Include="Schedules\Schedule.cs" />
