--- a/Rambutan/Zoo.csproj
+++ b/Rambutan/Zoo.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Animals\Animal.cs" />
+    <Compile Include="Animals\AnimalType.cs" />
     <Compile Include="Animals\Cage.cs" />
     <Compile Include="Animals\Consumables\Food.cs" />
     <Compile Include="Animals\Consumables\FoodManipulations.cs" />
