Added ISchedule interface.

--- a/Rambutan/Zoo.csproj
+++ b/Rambutan/Zoo.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Animals\Type\Aquatic.cs" />
     <Compile Include="Animals\Type\Terrestrial.cs" />
     <Compile Include="Interfaces\IPayable.cs" />
+    <Compile Include="Interfaces\ISchedule.cs" />
     <Compile Include="Menu\BaseMenuState.cs" />
     <Compile Include="Menu\MainMenu.cs" />
     <Compile Include="Menu\MenuEstateInformation.cs" />
