--- a/Rambutan/Zoo.csproj
+++ b/Rambutan/Zoo.csproj
@@ -108,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
+    <None Include="Documents\TeamWaterRambutan.docx" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
