--- a/Rambutan/Zoo.csproj
+++ b/Rambutan/Zoo.csproj
@@ -107,6 +107,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
+    <None Include="Documents\Rambutan.zip" />
     <None Include="Documents\TeamWaterRambutan.docx" />
   </ItemGroup>
   <ItemGroup />
